funciones de contraseña,nombre,hooks,service y variables

--- a/Client/.env
+++ b/Client/.env
@@ -1,8 +1,4 @@
 
-REACT_APP_SERVER_FRONT = 'http://localhost:3001'
+REACT_APP_API_URL=http://localhost:3001 
 
-# O para producción
-# REACT_APP_SERVER_FRONT=https://billetera-virtual-1.onrender.com
-
-
-REACT_APP_API_KEY=8d54b9e42cae5652dec59f50
+# REACT_APP_API_URL=https://billetera-virtual-1.onrender.com
