--- a/Client/package.json
+++ b/Client/package.json
@@ -32,6 +32,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
+    "react-transition-group": "^4.4.5",
     "reapop": "^4.2.2",
     "use-sound": "^4.0.3",
     "vercel": "^39.1.2"
