--- a/Client/package.json
+++ b/Client/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "react-transition-group": "^4.4.5",
