--- a/Client/.env
+++ b/Client/.env
@@ -1,4 +1,4 @@
 
-REACT_APP_API_URL=http://localhost:3001 
+# REACT_APP_API_URL=http://localhost:3001 
 
-# REACT_APP_API_URL=https://billetera-virtual-1.onrender.com
+REACT_APP_API_URL=https://billetera-virtual-1.onrender.com
