--- a/Server/package.json
+++ b/Server/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "build": "node -e \"console.log('Build completed')\"" 
   },
   "keywords": [],
   "author": "",
